objects/Project_Authorization__c.object
<CustomObject>
    <description>Created as part of R6 -  This Custom Object will be used to generate Letter Of Authorization and Power Of Attorney.</description>
    <fields>
        <fullName>ABB_LoA_Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R8 for community LoA purpose.</description>
        <label>ABB LoA Contact Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R6 - This Account lookup is used for End User Accounts.</description>
        <inlineHelpText>This Account lookup is used for End User Accounts.</inlineHelpText>
        <label>Account – End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Authorization (End User Name)</relationshipLabel>
        <relationshipName>Project_Authorization_End_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_of_the_Bidding_Company_CN__c</fullName>
        <description>Created as part of R6 - Address of the Bidding Company in Chinese</description>
        <label>Address of the Bidding Company (CN)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_of_the_Bidding_Company_EN__c</fullName>
        <description>Created as part of R6 - Address of the Bidding Company in English</description>
        <label>Address of the Bidding Company (EN)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_CN__c</fullName>
        <description>Created as part of R6 - Name of the Applicant in Chinese Language.</description>
        <label>Applicant (CN)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_EN__c</fullName>
        <description>Created as part of R6 - Name of the Applicant in English Language.</description>
        <formula>CreatedBy.FirstName  &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant (EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Position_CN__c</fullName>
        <description>Created as part of R6 - Position of the Sales Person in Chinese Language.</description>
        <label>Applicant Position (CN)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Position_EN__c</fullName>
        <description>Created as part of R6 - Position of the Sales Person in English Language.</description>
        <formula>CreatedBy.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Position (EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Application Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Created as part of R6 - Picklist containing active Applications relating to specific Product Groups.</description>
        <inlineHelpText>ABB classification of application based on the main process activity of the delivered product, service, solution. The selectable options are product group specific.</inlineHelpText>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>AP.301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.302</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.303</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.304</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.306</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.307</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Role_RMDR__c</fullName>
        <description>Created as part of R8 LoA Process and will fetch UserRole API Name</description>
        <formula>IF(OR(
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_NO_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_EA_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_SO_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_NE_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_NW_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_SW_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_CE_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_XI_Hub_Role)
) 
,$UserRole.DeveloperName,&apos;&apos;)</formula>
        <label>Approval Role MODR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Role__c</fullName>
        <description>Created as part of R6 - This field will fetch the API name and and email  of the logged-in user based on conditions.</description>
        <formula>IF(
OR(
($UserRole.Name = $Label.PjA_SalesTeam0_SH_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_BJ_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_CD_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_GZ_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_NJ_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_SY_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_WH_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_XA_Hub_Role),
($UserRole.Name = $Label.PjA_SalesMngt1_KAM_Role)
 ) 
,$UserRole.DeveloperName , 
IF($UserRole.Name = $Label.PjA_SalesMngt1_LPG_KAM_Role,
$User.Email,&apos;&apos;))</formula>
        <label>Approval Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Created as part of R6 - This field will show the status of approval process.</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting For Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_Type__c</fullName>
        <description>Created as part of R6 - This field is used for the record type of the LOA and POA.</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoNumber_Tech__c</fullName>
        <description>Created as part of R6 - This autonumber field will be used to update the value of the (Authorization Letter Number) Name field of Project Authorization.</description>
        <displayFormat>{00000}</displayFormat>
        <label>AutoNumber Tech</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bidding_Project_Name_CN__c</fullName>
        <description>Created as Part of R6 - The name of the  bidding project in Chinese.</description>
        <label>Bidding Project Name (CN)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bidding_Project_Name_EN__c</fullName>
        <description>Created as Part of R6 - The name of the bidding project in English.</description>
        <label>Bidding Project Name (EN)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as Part of R6 - This field is a lookup to the Contact.</description>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Authorization</relationshipLabel>
        <relationshipName>Project_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Created as Part of R6 - Country of ABB Location – Bidding unit</description>
        <formula>LEFT( Opportunity_Name_EN__r.ABB_Location__r.Company__c , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Institute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as Part of R6 - This Account lookup is used for Design Institute.</description>
        <label>Design Institute</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Authorization (Design Institute)</relationshipLabel>
        <relationshipName>Project_Authorization1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Created as part of R6 -Division of ABB Location – Bidding unit</description>
        <formula>LEFT(TEXT( Opportunity_Name_EN__r.ABB_Location__r.DIV__c),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_For_Approval_RMDR__c</fullName>
        <description>Created as part of R8 to verify the logged in users are eligible for submitting approval process</description>
        <formula>IF(
AND(
NOT(ISBLANK(Industry_Usage_RMDR__c)),
OR( 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_NO_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_EA_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_SO_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_NE_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_NW_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_SW_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_CE_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_MODR_XI_Hub_Role) 
)) 
,true,false)</formula>
        <label>Eligible For Approval MODR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_For_Approval__c</fullName>
        <description>Created as part of R6 - Eligiblity Criteria for approval request.</description>
        <formula>IF(
AND(
NOT(ISBLANK(Industry_Usage__c)),
OR(
($UserRole.Name = $Label.PjA_SalesTeam0_SH_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_BJ_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_CD_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_GZ_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_NJ_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_SY_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_WH_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesTeam0_XA_Hub_Role), 
($UserRole.Name = $Label.PjA_SalesMngt1_KAM_Role),
($User.Email = $Label.PjA_SalesMngt1_LPG_KAM1_User1), 
($User.Email = $Label.PjA_SalesMngt1_LPG_KAM1_User2),
($User.Email = $Label.PjA_SalesMngt1_LPG_KAM2_User1),
($User.Email = $Label.PjA_SalesMngt1_LPG_KAM2_User2))), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <description>Created as part of R8 Partner Community Build</description>
        <formula>CASE( CreatedBy.Profile.Name, 
&quot;ABB Ext Channel Partner Community User&quot;, $Label.SYS_Ext_Channel_Partner, 
&quot;ABB External Competitive&quot;, $Label.SYS_Ext_Agent , 
&quot;ABB External Customer&quot;, $Label.SYS_Ext_Support,$Label.SYS_Created_by_ABB)</formula>
        <label>External User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <description>Created as part of R6 - The field is used for the Fax Number.</description>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Generate_Date__c</fullName>
        <description>Created as part of R6 - This Date will be used on templates generated by CRMS to display Today&apos;s Date.</description>
        <formula>IF( TEXT(Template_Language__c) = &apos;English&apos;,Text(Day(Today())) &amp; &quot;/&quot;&amp;Text(Month(Today())) &amp; &quot;/&quot;&amp;Text(Year(Today())) ,  IF( TEXT(Template_Language__c) = &apos;Chinese&apos; ,Text(Year(Today())) &amp; &quot;年&quot;&amp;Text(Month(Today())) &amp; &quot;月&quot;&amp;Text(Day(Today()))&amp; &quot;日&quot; , &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate__c</fullName>
        <description>Created as part of R6 - This field will display a button &quot;Generate&quot; to Contract Risk Management Specialist only if the approval status is &quot;Approved&quot; or &quot;Completed&quot;.</description>
        <formula>IF(AND(OR(AND(Leading_LBU__c==&apos;MOMG&apos;,$UserRole.DeveloperName = $Label.Project_Authorization_CRMS_Role),
AND(Leading_LBU__c==&apos;MODR&apos;,$UserRole.DeveloperName = $Label.Project_Authorization_MODR_CRMS_Role)), 
OR(TEXT(Approval_Status__c) == $Label.PjA_Approval_Status_Approved,
TEXT(Approval_Status__c) == $Label.PjA_Approval_Status_Completed)), HYPERLINK(&quot;/apex/Apttus__DocumentGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Document&amp;templateType=Project Authorization&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;),  
IF(AND($UserRole.DeveloperName != $Label.Project_Authorization_CRMS_Role, 
OR(TEXT(Approval_Status__c) == $Label.PjA_Approval_Status_Approved,
TEXT(Approval_Status__c) == $Label.PjA_Approval_Status_Completed)), $Label.PjA_Mark_Complete_Available_For_Risk,$Label.PjA_Mark_Complete_Not_Applicable))</formula>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Common__c</fullName>
        <description>This field is created as part of R8, to hold common industry value for every BU</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_RMDR__c</fullName>
        <formula>CASE(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, 
&apos;IND.1&apos;,&apos;Automotive&apos;,
&apos;IND.2&apos;,&apos;Chemical&apos;,
&apos;IND.4&apos;,&apos;Food and Beverage&apos;,
&apos;IND.5&apos;,&apos;Printing&apos;,
&apos;IND.6&apos;,&apos;Textile&apos;,
&apos;IND.7&apos;,&apos;Metals&apos;,
&apos;IND.10&apos;,&apos;Mining and Minerals&apos;,
&apos;IND.13&apos;,&apos;Pharmaceutical and Cosmetics&apos;,
&apos;IND.14&apos;,&apos;Pulp and Paper&apos;,
&apos;IND.15&apos;,&apos;Rubber and Plastics Products&apos;,
&apos;IND.16&apos;,&apos;Other&apos;,
&apos;UT.1&apos;,&apos;Power&apos;,
&apos;UT.4&apos;,&apos;Water&apos;,
&apos;BLD.8&apos;,&apos;Residential Buildings&apos;,
&apos;BLD.9&apos;,&apos;Commercial &amp; institutional Buildings&apos;,
&apos;TRA.1&apos;,&apos;Marine&apos;,
&apos;TRA.4&apos;,&apos;Port &amp; Crane&apos;,
&apos;TRA.7&apos;,&apos;Logistics&apos;,
	CASE(Opportunity_Name_EN__r.ABB_Industry_Usage_Level3__c,
	&apos;IND.7.1&apos;,&apos;Aluminium&apos;,
	&apos;IND.7.2&apos;,&apos;Steel&apos;,
	&apos;IND.11.1&apos;,&apos;Cement&apos;,
	&apos;IND.12.2&apos;,&apos;Oil and Gas - Onshore&apos;,
	&apos;IND.12.1&apos;,&apos;Oil and Gas - Offshore&apos;,
	&apos;UT.1.5&apos;,&apos;Power Generation - Wind (off shore)&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Usage MODR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage__c</fullName>
        <description>Created as part of R6 - This field groups the industry Usage level2 values from opportunity.</description>
        <formula>IF(
            OR(
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;BLD.8&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;BLD.9&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.1&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.4&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.5&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.6&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.7&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.8&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.10&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.11&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.16&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.17&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.18&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;TRA.2&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;TRA.3&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;TRA.5&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;TRA.6&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;TRA.7&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;UT.2&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;UT.3&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;UT.5&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;UT.7&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;UT.8&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;UT.9&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;XY.1&apos;)
            )
            , &apos;Other&apos;,
            IF(OR(
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.2&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.3&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.12&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.13&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.14&apos;),
            ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;IND.15&apos;)
            )
            , &apos;COG&apos;,
            IF(ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;TRA.1&apos;),
            &apos;Marine&apos;,
            IF(ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;TRA.4&apos;),
            &apos;Port &amp; Crane&apos;,
            IF(ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;UT.1&apos;),
            &apos;Power&apos;,
            IF(ISPICKVAL(Opportunity_Name_EN__r.ABB_Industry_Usage_Level2__c, &apos;UT.4&apos;),
            &apos;Water&apos;,
            &apos;&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inviting_bidding_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R6 - This Account lookup is used for Inviting Bidding Party.</description>
        <label>Inviting bidding Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Authorization (Inviting bidding Party)</relationshipLabel>
        <relationshipName>Project_Authorization2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of R6 - Mark the LOA for CP or Non-CP.</description>
        <label>Is Channel Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opp_Value_Above_1M__c</fullName>
        <description>Created as part of R8 to decide opportunity value should be greater than 1M</description>
        <formula>Opportunity_Name_EN__r.Opportunity_Value__c &gt;150000.00</formula>
        <label>Is Opp Value Above 1M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leading_LBU__c</fullName>
        <description>Created as part of R6 - Local Business Unit is the ABB management organisation responsible to market product, specific system or service mix either on division, BU or product group level. It is the local organisational unit, representing the BU&apos;s activities in a country.</description>
        <formula>LEFT(Opportunity_Name_EN__r.ABB_Location__r.BU__c,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leading LBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leading_LPG__c</fullName>
        <description>Created as part of R6 - This field will calculate the LPG of the parent opportunity to be use in approval process entry criteria.This should not be available on Page Layouts.</description>
        <formula>Opportunity_Name_EN__r.Local_Product_Group__r.Product_Group_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leading LPG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Address__c</fullName>
        <description>Created as part of R6 - This field will show the full address of the Legal entity based on Legal Entity and Template Language.</description>
        <formula>IF( AND( Text(Legal_Entity__c) = $Label.PjA_CNBAL, Text(Template_Language__c) = &apos;Chinese&apos;) , &apos;上海市松江工业区松胜路160号&apos;, 
IF( AND( Text(Legal_Entity__c) = $Label.PjA_CNBAL, Text(Template_Language__c) = &apos;English&apos;),&apos;160 SongSheng Rd, Songjiang Industrial Zone, Shanghai, 201613, P.R. China&apos;, 
IF( AND( Text(Legal_Entity__c) =  $Label.PjA_CNEMS, Text(Template_Language__c) = &apos;Chinese&apos;) , &apos;上海市闵行开发区天星路380号&apos;, 
IF(AND( Text(Legal_Entity__c) =  $Label.PjA_CNEMS, Text(Template_Language__c) = &apos;English&apos;) ,&apos;No.380 Tianxing Rd, Minhang District, Shanghai, 200245, P.R. China&apos;, 
IF( AND( Text(Legal_Entity__c) = $Label.PjA_CNMOT, Text(Template_Language__c) = &apos;Chinese&apos;) , &apos;上海市闵行开发区天宁路88号&apos;, 
IF(AND( Text(Legal_Entity__c) = $Label.PjA_CNMOT, Text(Template_Language__c) = &apos;English&apos;) ,&apos;No.88 Tianning Rd, Minhang District, Shanghai, 200245, P.R. China&apos;, 
IF( AND( Text(Legal_Entity__c) = $Label.PjA_CNGEN, Text(Template_Language__c) = &apos;Chinese&apos;) , &apos;江西省南昌市高新开发区紫阳大道3088号&apos;, 
IF(AND( Text(Legal_Entity__c) = $Label.PjA_CNGEN, Text(Template_Language__c) = &apos;English&apos;) ,&apos;3088 ZiYang Avenue, High-Tech Development Zone, Nanchang, Jiangxi, 330096, P.R. China&apos;,NULL))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Full_Name__c</fullName>
        <description>Created as part of R6 - This field will show the full name of the Legal entity based on Legal Entity and Template Language.</description>
        <formula>IF( AND( Text(Legal_Entity__c)  = $Label.PjA_CNBAL, Text(Template_Language__c)  = &apos;Chinese&apos;) , &apos;上海ABB动力传动有限公司&apos;, 
IF( AND( Text(Legal_Entity__c)  = $Label.PjA_CNBAL, Text(Template_Language__c)  = &apos;English&apos;),&apos;Shanghai ABB Power Transmission Company Ltd.&apos;,
IF( AND( Text(Legal_Entity__c)  = $Label.PjA_CNEMS, Text(Template_Language__c)  = &apos;Chinese&apos;) , &apos;ABB高压电机有限公司&apos;, 
IF(AND( Text(Legal_Entity__c)  = $Label.PjA_CNEMS, Text(Template_Language__c)  = &apos;English&apos;) ,&apos;ABB Electrical Machines Ltd.&apos;,
IF( AND( Text(Legal_Entity__c)  = $Label.PjA_CNMOT, Text(Template_Language__c)  = &apos;Chinese&apos;) , &apos;上海ABB电机有限公司&apos;, 
IF(AND( Text(Legal_Entity__c)  = $Label.PjA_CNMOT, Text(Template_Language__c)  = &apos;English&apos;) ,&apos;ABB Shangehai Motros Co., Ltd.&apos;,
IF( AND( Text(Legal_Entity__c)  = $Label.PjA_CNGEN, Text(Template_Language__c)  = &apos;Chinese&apos;) , &apos;南昌ABB发电机有限公司&apos;, 
IF(AND( Text(Legal_Entity__c)  = $Label.PjA_CNGEN, Text(Template_Language__c)  = &apos;English&apos;) ,&apos;ABB Generators Ltd.&apos;,&apos;&apos;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <description>Created as part of R6 - This field will show the short name of the Legal entity based on which the approval process will go to the respective GM of those entity.</description>
        <label>Legal Entity</label>
        <picklist>
            <picklistValues>
                <fullName>CNEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNGEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNBAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNMOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNIAB</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mark_Complete__c</fullName>
        <description>Created as part of R6 - The field will be used by CRMS user to mark the LOA or POA application as Completed.</description>
        <formula>IF(

AND($UserRole.DeveloperName  = $Label.Project_Authorization_CRMS_Role,
	TEXT(Approval_Status__c) == $Label.PjA_Approval_Status_Approved,
	TEXT(Way_of_Delivery__c) == $Label.PjA_Express_Delivery,
	NOT(ISBLANK(Tracking_Number__c ))),
	
HYPERLINK(&apos;/apex/Complete_Project_Authorization?id=&apos;+Id, $Label.PjA_Mark_Complete_Click_Here,&apos;_self&apos;),

IF(

AND($UserRole.DeveloperName  = $Label.Project_Authorization_CRMS_Role,
	TEXT(Approval_Status__c) == $Label.PjA_Approval_Status_Approved,
	ISPICKVAL(Way_of_Delivery__c, &apos;Pick Up&apos;)),
	
HYPERLINK(&apos;/apex/Complete_Project_Authorization?id=&apos;+Id, $Label.PjA_Mark_Complete_Click_Here,&apos;_self&apos;),
 
IF(

AND($UserRole.DeveloperName  = $Label.Project_Authorization_CRMS_Role,
	TEXT(Approval_Status__c) == $Label.PjA_Approval_Status_Approved,
	ISPICKVAL(Way_of_Delivery__c, &apos;Fax&apos;)),
	
HYPERLINK(&apos;/apex/Complete_Project_Authorization?id=&apos;+Id, $Label.PjA_Mark_Complete_Click_Here,&apos;_self&apos;),
 
IF(

AND($UserRole.DeveloperName  = $Label.Project_Authorization_CRMS_Role,
	TEXT(Approval_Status__c) == $Label.PjA_Approval_Status_Approved,
	ISPICKVAL(Way_of_Delivery__c, &apos;Express Delivery&apos;),
	ISBLANK(Tracking_Number__c )),

$Label.PjA_Tracking_Number_Message,
 
IF(

AND($UserRole.DeveloperName  != $Label.Project_Authorization_CRMS_Role,
	NOT(TEXT(Approval_Status__c) == $Label.PjA_Approval_Status_Approved)),

$Label.PjA_Mark_Complete_Not_Applicable,

IF(
AND($UserRole.DeveloperName  == $Label.Project_Authorization_CRMS_Role,
	NOT(ISPICKVAL(Approval_Status__c,&apos;Approved&apos;))),

$Label.PjA_Mark_Complete_Not_Applicable,

$Label.PjA_Mark_Complete_Available_For_Risk)) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mark Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Local__c</fullName>
        <description>R6- This field is used for the local name of Account end user.</description>
        <formula>Opportunity_Name_EN__r.Account_End_User__r.Name_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account – End User (Local Language)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Company_s_products_CN__c</fullName>
        <description>Created as part of R6 - Name of Company’s products in Chinese</description>
        <label>Name of Company’s products (CN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Company_s_products_EN__c</fullName>
        <description>Created as part of R6 - Name of Company’s products in English</description>
        <label>Name of Company’s products (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Purchase_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R6 - The company will purchase products from the CP or ABB</description>
        <label>Name of Purchase Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Authorization</relationshipLabel>
        <relationshipName>Project_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Bidding_Company_CN__c</fullName>
        <description>Created as part of R6 - Name of the Bidding Company in Chinese</description>
        <label>Name of the Bidding Company (CN)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Bidding_Company_EN__c</fullName>
        <description>Created as part of R6 - Name of the Bidding Company in English.</description>
        <label>Name of the Bidding Company (EN)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Primary_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R6 - This lookup field is used for Product Group.</description>
        <inlineHelpText>Auto-populated from offering flagged as &quot;Primary Product Group&quot;. If offering is not yet known yet but the Product Group (representing main offering as demanded by customer) is, the Primary Product Group can be entered directly.</inlineHelpText>
        <label>Offering Primary Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Project Authorization (Offering Primary Product Group)</relationshipLabel>
        <relationshipName>Project_Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>